
syntax = "proto3";
import "Proto/common.proto";

option csharp_namespace = "SubscriptionService";

package BusinessCardApi;

service SubscriptionGrpc {
    rpc AddSubscriptionGrpc(AddSubscriptionGrpcCommand) returns (GrpcCommandResult){}
    rpc GetSubscriptionsByIdGrpc(GetByIdGrpcQuery) returns (PaginatedSubscriptionGrpcQueryResult) {}
}

message AddSubscriptionGrpcCommand {
    string clientId = 1;
    string planId = 2;
    string startDate = 3;
    int32 numberOfMonthToExpire = 4;
    string endDate = 5;
    int32 cardLevel = 6;
}

message SubscriptionGrpcResult {
    string clientId = 1;
    string planId = 2;
    string startDate = 3;
    int32 numberOfMonthToExpire = 4;
    string endDate = 5;
    int32 cardLevel = 6;
}

message PaginatedSubscriptionGrpcQueryResult {
    repeated SubscriptionGrpcResult result = 1;
}

